--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,55 +16,70 @@ img {
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
+
     &-dark {
         filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(100%);
     }
+
     &-w16 {
         width: 16px;
         height: 16px;
     }
+
     &-w20 {
         width: 20px;
         height: 20px;
     }
+
     &-social {
         width: 20px;
         height: 20px;
+
         &-facebook {
             background-image: url("../img/icon/facebook.svg");
         }
+
         &-x {
             background-image: url("../img/icon/twitter-x.svg");
         }
+
         &-instagram {
             background-image: url("../img/icon/instagram.svg");
         }
+
         &-linkedin {
             background-image: url("../img/icon/linkedin.svg");
         }
     }
+
     &-check {
         background-image: url("../img/icon/check.svg");
         width: 20px;
         height: 20px;
     }
+
     &-arrow-right {
         background-image: url("../img/icon/arrow-right.svg");
         width: 20px;
         height: 20px;
     }
+
     &-location {
         background-image: url("../img/icon/location.svg");
     }
+
     &-bad {
         background-image: url("../img/icon/bad.svg");
     }
+
     &-shower {
         background-image: url("../img/icon/shower.svg");
     }
+
     &-square {
         background-image: url("../img/icon/square.svg");
     }
+
     &-favorite {
         background-image: url("../img/icon/favorite.svg");
     }
@@ -72,6 +87,7 @@ img {
 
 .navbar {
     border-radius: 0 0 16px 16px;
+
     @media (min-width: 576px) {
         border-radius: 50rem;
     }
@@ -81,10 +97,12 @@ img {
     &-one {
         color: var(--bg-one);
     }
+
     &-two {
         color: var(--bg-two);
     }
 }
+
 .btn-main {
     outline: none;
     border: none;
@@ -97,30 +115,38 @@ img {
     gap: 8px;
     font-size: 1.1rem;
     transition: all 250ms;
+
     &-one {
         background-color: var(--bg-one);
+
         &:hover {
             background-color: var(--bg-one-hover);
         }
     }
+
     &-two {
         background-color: var(--bg-two);
+
         &:hover {
             background-color: var(--bg-two-hover);
         }
     }
+
     &-blue {
         background-color: var(--bg-blue);
+
         &:hover {
             background-color: var(--bg-blue-hover);
         }
     }
 }
+
 .hero-slider {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+
     &-content {
         position: absolute;
         display: flex;
@@ -128,9 +154,11 @@ img {
         align-items: center;
         justify-content: center;
         gap: 10px;
+
         @media (max-width: 992px) {
             margin-top: 70px;
         }
+
         &-info {
             color: var(--bg-one);
             border: 1px solid var(--bg-one);
@@ -139,20 +167,25 @@ img {
             text-align: center;
             font-weight: 600;
         }
+
         &-title {
             color: var(--bg-one);
             font-weight: 600;
             font-size: 2rem;
+
             @media (min-width: 992px) {
                 font-size: 4rem;
             }
         }
+
         &-desc {
             color: var(--bg-one);
         }
+
         &-search {
             position: relative;
             width: 100%;
+
             input {
                 border: none;
                 outline: none;
@@ -161,6 +194,7 @@ img {
                 padding: 25px 30px;
                 width: 100%;
             }
+
             button {
                 position: absolute;
                 right: 5px;
@@ -174,6 +208,7 @@ img {
                 align-items: center;
                 justify-content: center;
                 border-radius: 50%;
+
                 .icon-search {
                     background-image: url("../img/icon/search.svg");
                     background-position: center;
@@ -185,11 +220,13 @@ img {
                 }
             }
         }
+
         &-tag {
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
+
             &-link {
                 display: flex;
                 align-items: center;
@@ -200,6 +237,7 @@ img {
                 border-radius: 70px;
                 height: 50px;
                 padding: 5px 20px 5px 5px;
+
                 .tag-icon {
                     background-color: #ffffff;
                     display: flex;
@@ -210,18 +248,21 @@ img {
                     width: 40px;
                     height: 40px;
                 }
+
                 span {
                     color: #ffffff;
                 }
             }
         }
     }
+
     &-image {
         min-width: 100%;
         width: 100%;
         background-color: #c0cbc9;
         object-fit: cover;
         min-height: 100dvh;
+
         @media (min-width: 1200px) {
             min-height: 500px;
         }
@@ -240,27 +281,32 @@ img {
 .product-card {
     position: relative;
     margin-bottom: 1.5rem;
+
     &-tag {
         position: absolute;
         left: 25px;
         top: 25px;
         display: flex;
         gap: 10px;
+
         span {
             border-radius: 30px;
             padding: 5px 12px;
             text-transform: uppercase;
             font-weight: 600;
+
             &.bg-one {
                 background-color: var(--bg-one);
                 color: #ffffff;
             }
+
             &.bg-two {
                 background-color: var(--bg-two);
                 color: #1a1a1a;
             }
         }
     }
+
     &-content {
         display: flex;
         flex-direction: column;
@@ -273,23 +319,27 @@ img {
         padding: 20px;
         width: calc(100% - 50px);
         border-radius: 8px;
+
         &-title {
             font-size: 1.2rem;
             font-weight: 600;
             line-height: 100%;
             color: #1a1a1a;
         }
+
         &-location {
             display: flex;
             align-items: center;
             gap: 5px;
             color: #1a1a1a;
+
             .icon-location {
                 background-image: url("../img/icon/location.svg");
                 width: 20px;
                 height: 20px;
             }
         }
+
         &-price {
             display: flex;
             align-items: flex-end;
@@ -297,30 +347,37 @@ img {
             color: #eb664e;
             font-weight: 600;
         }
+
         &-property {
             display: flex;
             align-items: center;
             gap: 5px;
+
             &:not(:last-child) {
                 padding-right: 10px;
                 margin-right: 10px;
                 border-right: 1px solid #e9e9e9;
             }
+
             .icon {
                 width: 20px;
                 height: 20px;
+
                 &-bad {
                     background-image: url("../img/icon/bad.svg");
                 }
+
                 &-shower {
                     background-image: url("../img/icon/shower.svg");
                 }
+
                 &-square {
                     background-image: url("../img/icon/square.svg");
                 }
             }
         }
     }
+
     &-image {
         img {
             min-width: 100%;
@@ -332,6 +389,7 @@ img {
 
 .find-property-card {
     position: relative;
+
     &-content {
         background: linear-gradient(180deg, rgba(26, 26, 26, 0.8) 0%, rgba(26, 26, 26, 0.1) 60%, rgba(0, 0, 0, 0) 100%);
         position: absolute;
@@ -342,11 +400,13 @@ img {
         gap: 10px;
         border-radius: 16px;
         padding: 25px;
+
         span {
             color: #ffffff;
             line-height: 100%;
         }
     }
+
     img {
         max-width: 100%;
         height: 100%;
@@ -360,8 +420,10 @@ img {
         width: 8px;
         height: 8px;
         border-radius: 50%;
+
         &-active {
             position: relative;
+
             &::before {
                 content: "";
                 position: absolute;
@@ -379,10 +441,12 @@ img {
 
 .how-it-work {
     --card-radius: 12px;
+
     &-card {
         &-one {
             position: relative;
             margin-bottom: 24px;
+
             &-content {
                 background-color: #ffffff;
                 position: absolute;
@@ -395,6 +459,7 @@ img {
                 align-items: center;
                 justify-content: space-between;
                 gap: 15px;
+
                 &-icon {
                     background-color: var(--bg-one);
                     width: 45px;
@@ -405,6 +470,7 @@ img {
                     justify-content: center;
                 }
             }
+
             img {
                 border-radius: var(--card-radius);
                 width: 100%;
@@ -414,6 +480,7 @@ img {
                 object-position: top;
             }
         }
+
         &-two {
             img {
                 width: 100%;
@@ -422,6 +489,7 @@ img {
                 object-fit: cover;
             }
         }
+
         &-three {
             img {
                 width: 100%;
@@ -432,11 +500,14 @@ img {
             }
         }
     }
+
     &-property {
         display: flex;
         gap: 20px;
+
         &-icon {
             position: relative;
+
             &::before {
                 content: "";
                 position: absolute;
@@ -450,21 +521,26 @@ img {
                 transform: translate(-35%, 50%);
                 transition: all 250ms;
             }
+
             .icon {
                 display: block;
                 width: 35px;
                 height: 35px;
+
                 &-home {
                     background-image: url("../img/icon/home.svg");
                 }
+
                 &-meet {
                     background-image: url("../img/icon/meet.svg");
                 }
+
                 &-key {
                     background-image: url("../img/icon/key.svg");
                 }
             }
         }
+
         &:hover &-icon::before {
             background-color: #ffe59c;
         }
@@ -473,18 +549,23 @@ img {
 
 .should-work {
     background-color: #fff8f6;
+
     &-image {
         border-radius: 16px;
         overflow: hidden;
+
         &:hover img {
             transform: scale(1.1);
         }
+
         &-one {
             margin-bottom: 24px;
         }
+
         &-two {
             margin-top: 120px;
         }
+
         img {
             width: 100%;
             height: 100%;
@@ -499,6 +580,7 @@ img {
             border-radius: 16px;
             padding: 24px;
             margin-left: 100px;
+
             &-icon {
                 background-color: var(--bg-one);
                 display: flex;
@@ -510,6 +592,7 @@ img {
             }
         }
     }
+
     &-content {
         &-icon {
             background-color: #ffffff;
@@ -519,6 +602,7 @@ img {
             width: 40px;
             height: 40px;
             border-radius: 50%;
+
             .icon-check {
                 width: 15px;
                 height: 15px;
@@ -529,9 +613,12 @@ img {
 
 .blog-card {
     &-content {
-        white-space: nowrap; /* alt satıra inme */
-        overflow: hidden; /* taşan kısımları gizle */
-        text-overflow: ellipsis; /* devamı varsa sonuna üç nokta */
+        white-space: nowrap;
+        /* alt satıra inme */
+        overflow: hidden;
+        /* taşan kısımları gizle */
+        text-overflow: ellipsis;
+        /* devamı varsa sonuna üç nokta */
     }
 }
 
@@ -539,10 +626,12 @@ img {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+
     &-discovery {
         background-image: url("../img/background/discovery.jpg");
         background-attachment: fixed;
         position: relative;
+
         &::after {
             content: "";
             background-color: rgba(218, 220, 227, 0.8);
@@ -553,12 +642,15 @@ img {
             height: 100%;
         }
     }
+
     &-list {
         background-image: url("../img/background/list-header.png");
     }
+
     &-one {
         background-color: var(--bg-one);
     }
+
     &-two {
         background-color: var(--bg-two);
     }
@@ -570,6 +662,7 @@ img {
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+
     &::after {
         content: "";
         position: absolute;
@@ -582,11 +675,13 @@ img {
 
 .these-cities {
     &-image {
+
         &-big,
         &-small {
             display: flex;
             position: relative;
             width: 100%;
+
             img {
                 height: 100%;
                 min-height: 100%;
@@ -596,6 +691,7 @@ img {
                 border-radius: 16px;
             }
         }
+
         &-content {
             --content-space: 5%;
             position: absolute;
@@ -624,14 +720,17 @@ footer {
     border: 1px solid #e9e9e9;
     border-radius: 16px;
     transition: all 150ms;
+
     &-image {
         position: relative;
+
         &-tag {
             display: flex;
             gap: 10px;
             position: absolute;
             left: 20px;
             top: 20px;
+
             a {
                 display: inline-block;
                 padding: 5px 10px;
@@ -642,21 +741,26 @@ footer {
                 text-decoration: none;
                 opacity: 0.85;
                 transition: all 150ms;
+
                 &:hover {
                     opacity: 1;
                 }
             }
         }
+
         img {
             border-radius: 16px 16px 0 0;
         }
     }
+
     &-content {
         padding: 20px;
+
         &-top {
             border-bottom: 1px solid #e9e9e9;
             padding-bottom: 10px;
             margin-bottom: 10px;
+
             &-title {
                 font-size: 1.25rem;
                 font-weight: 600;
@@ -665,6 +769,7 @@ footer {
                 color: #1a1a1a;
                 text-decoration: none;
             }
+
             &-address {
                 font-size: 0.9rem;
                 display: flex;
@@ -672,6 +777,7 @@ footer {
                 gap: 3px;
                 margin-bottom: 15px;
             }
+
             &-feature {
                 border: 1px solid #e9e9e9;
                 border-radius: 30rem;
@@ -682,24 +788,29 @@ footer {
                 gap: 5px;
             }
         }
+
         &-bottom {
             display: flex;
             align-items: center;
             justify-content: space-between;
+
             &-price {
                 display: flex;
                 align-items: flex-end;
                 color: #eb664e;
+
                 span {
                     font-size: 1.1rem;
                     font-weight: 600;
                     line-height: 100%;
                 }
+
                 small {
                     font-size: 0.85rem;
                     line-height: 120%;
                 }
             }
+
             &-favorite {
                 border: 1px solid #e9e9e9;
                 border-radius: 50%;
@@ -710,9 +821,11 @@ footer {
                 align-items: center;
                 justify-content: center;
                 transition: all 100ms;
+
                 &:hover,
                 &.active {
                     border-color: #eb664e;
+
                     .icon {
                         background-image: url("../img/icon/favorite-active.svg");
                     }
@@ -720,6 +833,7 @@ footer {
             }
         }
     }
+
     &:hover {
         box-shadow: rgba(0, 0, 0, 0.08) 0 4px 12px;
     }
@@ -734,16 +848,18 @@ footer {
     top: var(--filter-top);
     height: calc(100dvh - (var(--filter-top) + 40px));
     padding: 15px;
+
     &-content {
         border-bottom: 1px solid #c0cbc9;
         margin-bottom: 10px;
         padding-bottom: 10px;
+
         &-elements {
             .form-check {
-                input:checked + label{
-                        background-color: #e7c873;
-                        
-                    }
+                input:checked+label {
+                    background-color: #e7c873;
+
+                }
             }
         }
 
@@ -752,12 +868,14 @@ footer {
             font-weight: 600;
             margin-bottom: 5px;
         }
+
         &-elements {
             .filter-link {
                 display: block;
                 text-decoration: none;
                 color: #667573;
                 transition: padding-left 150ms, color 400ms;
+
                 &:hover {
                     color: var(--bg-one-hover);
                     padding-left: 15px;
@@ -766,3 +884,40 @@ footer {
         }
     }
 }
+
+.football-card {
+    position: relative;
+    overflow: hidden;
+
+    img {
+        max-width: 100%;
+        height: 100%;
+        border-radius: 16px;
+    }
+
+    &-content {
+        background: linear-gradient(180deg, rgba(26, 26, 26, 0.5) 0%, rgba(26, 26, 26, 0.7) 60%, rgba(0, 0, 0, 1) 100%);
+        position: absolute;
+        width: 332px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 25px;
+        transform: translateY(80%);
+        transition: transform 600ms;
+        border-radius: 16px;
+
+        span {
+            color: #ffffff;
+            line-height: 100%;
+            font-size: 16px;
+        }
+    }
+
+    &:hover &-content {
+        transform: translateY(0);
+
+    }
+}
+
+
