--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -843,49 +843,98 @@ footer {
     }
 }
 
-.property-filter {
-    --filter-top: 110px;
-    border: 1px solid #e9e9e9;
-    border-radius: 16px;
-    position: sticky;
-    position: -webkit-sticky;
-    top: var(--filter-top);
-    height: calc(100dvh - (var(--filter-top) + 40px));
-    padding: 15px;
+.property-filter-wrapper {
+    height: 100%;
 
-    &-content {
-        border-bottom: 1px solid #c0cbc9;
-        margin-bottom: 10px;
-        padding-bottom: 10px;
+    .property-filter {
+        --filter-top: 110px;
+        border: 1px solid #e9e9e9;
+        border-radius: 16px;
+        position: sticky;
+        position: -webkit-sticky;
+        top: var(--filter-top);
+        height: calc(100dvh - (var(--filter-top) + 40px));
+        padding: 15px;
 
-        &-elements {
-            .form-check {
-                input:checked+label {
-                    background-color: #e7c873;
+        @media (max-width: 991px) {
+            position: fixed;
+            inset: 0;
+            z-index: 9999;
+            background-color: #ffffff;
+            width: 80%;
+            padding: 20px;
+            transform: translateX(-100%);
+            transition: all 300ms;
+            height: 100%;
+            border-radius: 0 16px 16px 0;
 
-                }
+            &-overlay {
+                background-color: rgba(0, 0, 0, 0.8);
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                z-index: 9998;
+                inset: 0;
+                display: none;
             }
         }
 
-        &-title {
-            font-size: 1.2rem;
-            font-weight: 600;
-            margin-bottom: 5px;
-        }
+        &-content {
+            margin-bottom: 10px;
+            padding-bottom: 10px;
 
-        &-elements {
-            .filter-link {
-                display: block;
-                text-decoration: none;
-                color: #667573;
-                transition: padding-left 150ms, color 400ms;
+            &:not(:last-child) {
+                border-bottom: 1px solid #c0cbc9;
+            }
 
-                &:hover {
-                    color: var(--bg-one-hover);
-                    padding-left: 15px;
+            &-title {
+                font-size: 1.2rem;
+                font-weight: 600;
+                margin-bottom: 5px;
+            }
+
+            &-elements {
+                .filter-link {
+                    display: block;
+                    text-decoration: none;
+                    color: #667573;
+                    transition: padding-left 150ms, color 400ms;
+
+                    &:hover {
+                        color: var(--bg-one-hover);
+                        padding-left: 15px;
+                    }
+                }
+
+                .form-check {
+                    padding-left: 0;
+
+                    label {
+                        display: block;
+                        border-radius: 8px;
+                        padding: 5px 10px;
+                        font-weight: 500;
+                    }
+
+                    input[type="checkbox"],
+                    input[type="radio"] {
+                        display: none;
+
+                        &:checked+label {
+                            background-color: #c6df92;
+                        }
+                    }
                 }
             }
         }
+    }
+
+    &.active .property-filter {
+        transform: translateX(0);
+    }
+
+    &.active .property-filter-overlay {
+        display: block;
     }
 }
 
@@ -924,4 +973,76 @@ footer {
     }
 }
 
+.category-header {
+    &-exclusive {
+        position: relative;
 
+        &-card {
+            background-color: #fff;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            padding: 10px;
+            width: 230px;
+            height: 100px;
+            transform: translate(30px, 20px);
+            border-radius: 16px;
+            &-person {
+                img {
+                    width: 30px;
+                    height: 30px;
+                    object-fit: cover top;
+                    border-radius: 50%;
+                }
+            }
+        }
+
+    }
+    &-bg {
+        background: linear-gradient(119.44deg, #fff8f6 52.97%, #fbefdf 134.09%);
+
+    }
+
+    &-image {
+        &-1 {
+
+            img {
+                margin-top: 15px;
+            }
+
+            :nth-child(1) {
+                border-radius: 120px 16px 0px 16px;
+            }
+
+            :nth-child(2) {
+                border-radius: 16px 0px 0px 16px;
+            }
+        }
+
+        &-2 {
+
+            img {
+                margin-top: 15px;
+            }
+
+            :nth-child(1) {
+                border-radius: 0px 16px 16px 0px;
+            }
+
+            :nth-child(2) {
+                border-radius: 0px 16px 150px 0px;
+            }
+        }
+    }
+}
+
+.text-gold {
+    color: gold;
+}
+
+.category-description {
+    margin-top: 150px;
+    &-search {
+        background-color: #fff;
+    }
+}
