--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1101,3 +1101,32 @@ footer {
         }
     }
 }
+
+.find-category-card {
+    border: 1px solid #E9E9E9;
+    border-radius: 16px;
+    padding: 0px 10px;
+
+    &-content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        border-radius: 16px;
+        padding: 25px;
+
+        span {
+            color: #000;
+            line-height: 100%;
+        }
+    }
+
+    img {
+        min-height: 60px;
+        min-width: 60px;
+        width: 60px;
+        height: 60px;
+        border-radius: 16px;
+    }
+}
